# PharaohFarmPot-telegram-bot

./: .env-example  .gitignore  README.md  main.py  pyproject.toml
tg_bot/data/: config.py  database.py  loader.py
tg_bot/handlers/user/: __init__.py  apshed.py  features.py  start.py
tg_bot/keyboards/user/: inline.py
tg_bot/middlewares/: alert_double_up.py
tg_bot/misc/: commands.py  states.py
tg_bot/utils/: read_contract.py
